@@ -458,28 +458,28 @@ gst_ttmlparse_sax_document_end (void *ctx)
 static xmlSAXHandler gst_ttmlparse_sax_handler = {
   /* .internalSubset = */ NULL,
   /* .isStandalone = */ NULL,
-  /*. hasInternalSubset = */ NULL,
-  /*. hasExternalSubset = */ NULL,
-  /*. resolveEntity = */ NULL,
-  /*. getEntity = */ gst_ttmlparse_sax_get_entity,
-  /*. entityDecl = */ NULL,
-  /*. notationDecl = */ NULL,
-  /*. attributeDecl = */ NULL,
-  /*. elementDecl = */ NULL,
-  /*. unparsedEntityDecl = */ NULL,
-  /*. setDocumentLocator = */ NULL,
-  /*. startDocument = */ gst_ttmlparse_sax_document_start,
-  /*. endDocument = */ gst_ttmlparse_sax_document_end,
-  /*. startElement = */ gst_ttmlparse_sax_element_start,
-  /*. endElement = */ gst_ttmlparse_sax_element_end,
-  /*. reference = */ NULL,
-  /*. characters = */ gst_ttmlparse_sax_characters,
-  /*. ignorableWhitespace = */ NULL,
-  /*. processingInstruction = */ NULL,
-  /*. comment = */ gst_ttmlparse_sax_comment,
-  /*. warning = */ gst_ttmlparse_sax_warning,
-  /*. error = */ gst_ttmlparse_sax_error,
-  /*. fatalError = */ gst_ttmlparse_sax_error,
+  /* .hasInternalSubset = */ NULL,
+  /* .hasExternalSubset = */ NULL,
+  /* .resolveEntity = */ NULL,
+  /* .getEntity = */ gst_ttmlparse_sax_get_entity,
+  /* .entityDecl = */ NULL,
+  /* .notationDecl = */ NULL,
+  /* .attributeDecl = */ NULL,
+  /* .elementDecl = */ NULL,
+  /* .unparsedEntityDecl = */ NULL,
+  /* .setDocumentLocator = */ NULL,
+  /* .startDocument = */ gst_ttmlparse_sax_document_start,
+  /* .endDocument = */ gst_ttmlparse_sax_document_end,
+  /* .startElement = */ gst_ttmlparse_sax_element_start,
+  /* .endElement = */ gst_ttmlparse_sax_element_end,
+  /* .reference = */ NULL,
+  /* .characters = */ gst_ttmlparse_sax_characters,
+  /* .ignorableWhitespace = */ NULL,
+  /* .processingInstruction = */ NULL,
+  /* .comment = */ gst_ttmlparse_sax_comment,
+  /* .warning = */ gst_ttmlparse_sax_warning,
+  /* .error = */ gst_ttmlparse_sax_error,
+  /* .fatalError = */ gst_ttmlparse_sax_error,
 };
 
 /* Free any parsing-related information held by the element */
